--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cayman theme
 description: Welcome to the Castillo Lab
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
