--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cayman theme
-description: Welcome to the Castillo Lab
+description: Welcome to the Castillo Lab at New Mexico State University
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
