--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Cayman theme
 description: Welcome to the Castillo Lab at New Mexico State University  
- # Lab Phone Number: (575) 646-7678
+description: Lab Phone Number: (575) 646-7678
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
