--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Castillo Lab of Humoral Immunology"
+title: Castillo Lab of Humoral Immunology
 description: Welcome to the Castillo Lab at New Mexico State University
 show_downloads: false
 theme: jekyll-theme-cayman
