--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ locale:       "en"
 # About/contact
 author: Jorge C. Galarza Prieto
   name:       Jorge C. Galarza Prieto
-  url:        http://yourhomepage.com 
+  url:        http://nmsucastillolab.github.io
 
 # Gems
 gems:
