--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 
+title: test test test
 description: Welcome to the Castillo Lab at New Mexico State University
 show_downloads: false
 google_analytics:
