--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Castillo Lab of Symbiosis and Comparative Immunology
+title: Castillo Lab
 description: Welcome to the Castillo Lab at New Mexico State University
 show_downloads: false
 google_analytics:
