--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Castillo Lab
-description: Welcome to the Castillo Lab at New Mexico State University
-show_downloads: false
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
