--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Castillo Lab of Symbiosis and Comparative Immunology
-description: Phone Number: (575) 646-7876
+description: Welcome to the Castillo Lab at New Mexico State University
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
